--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=http://hacknaman.in/">
+        <script type="text/javascript">
+            window.location.href = "http://hacknaman.in/"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://hacknaman.in/'>link to example</a>
+    </body>
 </html>
