--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://hacknaman.in/">
+        <meta http-equiv="refresh" content="1;url=http://hacknaman.in/mmb/">
         <script type="text/javascript">
-            window.location.href = "http://hacknaman.in/"
+            window.location.href = "http://hacknaman.in/mmb/"
         </script>
         <title>Page Redirection</title>
     </head>
