redirect to index page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://hacknaman.in/mmb/">
+        <meta http-equiv="refresh" content="1;url=http://hacknaman.in/">
         <script type="text/javascript">
             window.location.href = "http://hacknaman.in/mmb/"
         </script>
